# PortfolioTracker

./: .editorconfig  .eslintrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.txt  ABOUT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETL_NOTEBOOK.ipynb  L.py  LICENSE  PRESENTATION_NOTEBOOK.ipynb  README.md  a.csv  a.py  all_runner.sh  cap.py  cleanup.sh  closed_positions.csv  common_utilities.py  index.html  open_positions.csv  out.csv  package.json  pinterest-c5fd9.html  pyproject.toml  requirements.md  requirements.txt  sample.env  sample.env.txt  setup.cfg  t.ipynb  test.py  trade_history.csv  tsconfig.json  up.py  vite.config.ts
.github/: ABOUT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  website.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom.md  feature_request.md
.github/workflow/: autoupdate.yaml
.github/workflows/: autoupdate.yaml  cd.yml  ci.yml  data_update.yml  deploy_github_pages.yml  main.yml  pages-build-deployment.yml  pre-commit.yaml  pre-commit.yml  pre-commit_autoupdate.yaml  publish.yml  release-drafter.yml  test.yml  update-notebooks.yml  update.yml  website.yml
CONFIG/CONSTANTS/: stock_tickers.json
DATA/: TATAMOTORS.NS.csv  TATAPOWER.NS.csv
DATA/API/: API_data.json  CurrentHoldings_data.json  HoldingsTrands_data.json  Holdings_data.json  ProfitLoss_data.json  current_holding_data.json  dividend_data.deepshikhapatel.json  dividend_data.json  financial_summary.json  holding_trands_data.json  holding_trands_data.ptprashanttripathi.json  profit_loss_data.json  profit_loss_data.ptprashanttripathi.json
DATA/GOLD/: Holdings.csv  Holdings.json  Invested.csv  Invested.json  StockPrice.csv  StockPrice.json  TradeHistory.csv  TradeHistory.json
DATA/SILVER/: Equity.json  TradeHistory.csv  TradeHistory.json
DATA/SOURCE/: OLD_trade_groww.xlsx  trade_2021_846833.xlsx  trade_2122_846833.xlsx  trade_2223_846833.xlsx  trade_2324_846833.xlsx  trade_2425_846833.xlsx
ETLTOOLS/: __init__.py  test.py  version.py
ETLTOOLS/datetimeutils/: __init__.py
ETLTOOLS/globalpath/: __init__.py
ETLTOOLS/portfolio/: __init__.py  stock.py  test.py  trade_position.py  trade_record.py
ETLTOOLS/utils/: __init__.py
FRONTEND/: README.md  a.html  about.html  alt_script.html  chart.js.html  charts-chartjs.html  current_holding.html  current_holdings.html  dividend.html  esbuild.config.js  highlight.html  home.html  icons-feather.html  iframe-dark.html  iframe.html  index.html  index1.html  index2.html  index3.html  info.html  k.html  k.py  lightweight.html  local.html  local1.html  local2.html  maps-google.html  old-index.html  old.html  out.csv  package.json  pages-blank.html  ploty.html  profit_and_loss.html  script.js  starter.html  test.html  ui-buttons.html  ui-cards.html  ui-forms.html  (+2 more)
FRONTEND/.github/: PULL_REQUEST_TEMPLATE.md
FRONTEND/AdminLTE-3.2.0/: home.html  iframe-dark.html  iframe.html  index1.html  index2.html  index3.html  starter.html
FRONTEND/admin/: home.html  iframe-dark.html  iframe.html  index1.html
FRONTEND/adminlte/: .gitattributes  404.html  500.html  advanced.html  blank.html  boxed.html  buttons.html  calendar.html  chartjs.html  collapsed-sidebar.html  compose.html  contact-us.html  contacts.html  data.html  e-commerce.html  editors.html  enhanced.html  (+55 more)
MODULES/: install.md
NOTEBOOKS/: 00_ETL_Source2Bronze_Layer_StockPrice.ipynb  00_ETL_Source2Bronze_Layer_TradeHistory.ipynb  01_ETL_Bronze2Silver_Layer_Symbol.ipynb  01_ETL_Bronze2Silver_Layer_TradeHistory.ipynb  01_ETL_Source2Bronze_Layer_TradeHistory.ipynb  02_ETL_Bronze2Silver_Layer_BillSummary.ipynb  02_ETL_Bronze2Silver_Layer_Ledger.ipynb  02_ETL_Bronze2Silver_Layer_StockPrice.ipynb  02_ETL_Bronze2Silver_Layer_TradeHistory.ipynb  02_ETL_Source2Bronze_Layer_StockData.ipynb  02_ETL_Source2Bronze_Layer_StockPrice.ipynb  03_ETL_Bronze2Silver_Layer_Equity.ipynb  03_ETL_Bronze2Silver_Layer_ScripCode.ipynb  03_ETL_Bronze2Silver_Layer_StockEvents.ipynb  03_ETL_Bronze2Silver_Layer_StockPrice.ipynb  03_ETL_Bronze2Silver_Layer_Symbol.ipynb  04_ETL_Bronze2Silver_Layer_Ledger.ipynb  04_ETL_Bronze2Silver_Layer_Symbol.ipynb  04_ETL_Bronze2Silver_Layer_TradeHistory.ipynb  04_ETL_Silver2Gold_Layer_ProfitLoss_and_Holding.ipynb  04_ETL_Silver2Gold_Layer_TradeHistory.ipynb  05_ETL_Bronze2Silver_Layer_StockPrice.ipynb  05_ETL_Silver2Gold_Layer_Holdings.ipynb  05_ETL_Silver2Gold_Layer_ProfitLoss.ipynb  05_ETL_Silver2Gold_Layer_ProfitLoss_and_Holding.ipynb  05_ETL_Silver2Gold_Layer_TradeHistory.ipynb  06_ETL_Bronze2Silver_Layer_StockEvents.ipynb  06_ETL_Silver2Gold_Layer_Holdings.ipynb  06_ETL_Silver2Gold_Layer_Investment.ipynb  06_ETL_Silver2Gold_Layer_ProfitLoss.ipynb  06_ETL_Silver2Gold_Layer_TradeHistory.ipynb  06_PRESENTATION_Layer.ipynb  07_ETL_Silver2Gold_Layer_Holdings.ipynb  07_ETL_Silver2Gold_Layer_Investment.ipynb  07_ETL_Silver2Gold_Layer_ProfitLoss_and_Holding.ipynb  07_PRESENTATION_Layer.ipynb  08_ETL_Silver2Gold_Layer_Holdings_v2.ipynb  08_ETL_Silver2Gold_Layer_Investment.ipynb  08_PRESENTATION_Layer.ipynb  09_ETL_Silver2Gold_Layer_Dividend.ipynb  (+20 more)
NOTEBOOKS_NEW/: data.ipynb
NOTEBOOKS_TEST/: processor.py  processor_new.py
PIPELINE/: all_runner.sh
PIPELINES/: all_runner.sh
PortfolioTracker/: Stock.py  __test__.py  globalpath.py  logger.py  portfolio.py  stock.py  utilities.py  version.py
SCRIPTS/: all_runner.sh  format_json.py  update_requirements.py
StockETL/: __init__.py  etl.py  version.py
companyAction/: companyAction.ipynb
index/: chart.html  chart2.html
kite_pnl/: Corporate_Actions.csv  README.md  TRADEBOOK ALL-EQ 01_04_2017 TO 17_05_2018.xlsx  TRADEBOOK.csv  bonus.csv  companyAction.ipynb  companyAction.py  result_pnl_output.csv  split.csv
public/: site.webmanifest
src/: app.tsx  index.tsx
test/: Safal-Niveshak-Stock-Analysis-Excel-Version-4.0.xlsx  get_data.js  index.js  options.js  package.json  pnl_new.ipynb  trading_pnl.py
testing/: pnl_testing.ipynb
tools/: all_runner.sh  format_json.py  update_requirements.py
(+5443 files in other folders)
