[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ETLTools"
version = "0.3.1"
description = "Completed ETL from stock exchanges and calculate PNL AMOUNT and other stuff"
license = { file = "LICENSE" }
authors = [
  { name = "ptprashanttripathi", email = "ptprashanttripathi@outlook.com" }
]
readme = { file = "README.txt", content-type = "text/markdown" }
requires-python = ">=3.7"
keywords = ["packaging", "setuptools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://ptprashanttripathi.github.io/PortfolioTracker"
Repository = "https://github.com/ptprashanttripathi/PortfolioTracker"
Documentation = "https://ptprashanttripathi.github.io/PortfolioTracker"
Issues = "https://github.com/ptprashanttripathi/PortfolioTracker/issues"
Changelog = "https://github.com/PtPrashantTripathi/PortfolioTracker/blob/main/.github/CHANGELOG.md"

[tool.setuptools]
packages = ["ETLTools"]

[tool.setuptools.package-dir]
ETLTools = "ETLTOOLS"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
treat_comments_as_code = ["# %%"]
